--- a/YaadVibe/package.json
+++ b/YaadVibe/package.json
@@ -1,13 +1,24 @@
 {
-  "name": "yaadvibe-dapp",
+  "name": "yaadvibe",
   "version": "1.0.0",
+  "private": true,
   "dependencies": {
-    "@twa/tonconnect": "^2.0.0",
+    "@tonconnect/ui-react": "^2.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "build": "react-scripts build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": ["react-app"]
+  },
+  "browserslist": {
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   }
 }
