--- a/Vercel.json
+++ b/Vercel.json
@@ -8,11 +8,23 @@
     {
       "src": "YaadVibe/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
+      "config": {
+        "distDir": "build"
+      }
     }
   ],
   "routes": [
-    { "src": "/", "dest": "/YaadLife-Lite/index.html" },
-    { "src": "/YaadVibe/(.*)", "dest": "/YaadVibe/build/$1" }
+    {
+      "src": "/",
+      "dest": "/YaadLife-Lite/index.html"
+    },
+    {
+      "src": "/YaadVibe",
+      "dest": "/YaadVibe/build/index.html"
+    },
+    {
+      "src": "/YaadVibe/(.*)",
+      "dest": "/YaadVibe/build/$1"
+    }
   ]
 }
