--- a/Vercel.json
+++ b/Vercel.json
@@ -7,7 +7,7 @@
     },
     {
       "src": "YaadVibe/package.json",
-      "use": "@vercel/static-build",
+      "use": "@vercel/node",
       "config": {
         "distDir": "build"
       }
