--- a/YaadVibe/YaadLife-Ecosystem/YaadVibe/package.json
+++ b/YaadVibe/YaadLife-Ecosystem/YaadVibe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yaadvibe-dapp",
+  "name": "yaadvibe",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -9,25 +9,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "start": "react-scripts start"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   }
 }
