--- a/YaadVibe/public/tonconnect-manifest.json
+++ b/YaadVibe/public/tonconnect-manifest.json
@@ -3,5 +3,6 @@
   "name": "YaadVibe Villas",
   "iconUrl": "https://yaadvibe-v21.vercel.app/favicon.ico",
   "termsOfUseUrl": "https://yaadvibe-v21.vercel.app/terms",
-  "privacyPolicyUrl": "https://yaadvibe-v21.vercel.app/privacy"
+  "privacyPolicyUrl": "https://yaadvibe-v21.vercel.app/privacy",
+  "twaReturnUrl": "https://t.me/YaadLifeBot/app?startapp=return"
 }
