--- a/YaadVibe/package.json
+++ b/YaadVibe/package.json
@@ -1,12 +1,14 @@
 {
   "name": "yaadvibe",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "private": true,
   "dependencies": {
     "@tonconnect/ui-react": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "date-fns": "^2.30.0",
+    "react-date-range": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
